add html template

--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
 </head>
 
 <body>
+    <div class="contain">
+        <h1>Cash Register Manager</h1>
+        <small style="display:block">Enter the bill amount and cash given by the customer and know minimum number of
+            notes to return</small>
+        <label for="bill-amount">Bill amount</label>
+        <input id="bill-amount" type="number">
+        <label for="given-amount">Cash given</label>
+        <input id="given-amount" type="number">
+        <button>Check</button>
+        <table>
+            <caption>Return Change</caption>
+            <tr>
+                <th>No. of Notes</th>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <th>Notes</th>
+                <td>2000</td>
+                <td>500</td>
+                <td>100</td>
+                <td>20</td>
+                <td>10</td>
+                <td>5</td>
+                <td>1</td>
+            </tr>
+        </table>
+    </div>
 
 </body>
 
