--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cash register App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="contain">
+    <div class="container">
         <h1>Cash Register Manager</h1>
-        <small style="display:block">Enter the bill amount and cash given by the customer and know minimum number of
+        <small>Enter the bill amount and cash given by the customer and know minimum number of
             notes to return</small>
         <label for="bill-amount">Bill amount</label>
         <input id="bill-amount" type="number">
