--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
         <input id="bill-amount" type="number">
         <label for="given-amount">Cash given</label>
         <input id="given-amount" type="number">
-        <button>Check</button>
+        <button id="check">Check</button>
+        <p id="error">hh</p>
         <table>
             <caption>Return Change</caption>
-            <tr>
+            <tr id="number">
                 <th>No. of Notes</th>
                 <td>0</td>
                 <td>0</td>
@@ -32,7 +33,7 @@
                 <td>0</td>
                 <td>0</td>
             </tr>
-            <tr>
+            <tr id="denomination">
                 <th>Notes</th>
                 <td>2000</td>
                 <td>500</td>
@@ -46,5 +47,6 @@
     </div>
 
 </body>
+<script src="./app.js"></script>
 
 </html>
