style-change font-size

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="container">
         <h1>💵Cash Register Manager💵</h1>
-        <small style="font-family: serif">Enter the bill amount and cash given by the customer and know minimum number
+        <p>Enter the bill amount and cash given by the customer and know minimum number
             of
-            notes to return</small>
+            notes to return</p>
         <label for="bill-amount" style="margin-top: 1rem">Bill amount</label>
         <input class="bill" id="bill-amount" type="number">
         <button id="next" class="button-style">Next</button>
